# dialogos

./: CLAUDE.md  justfile  pyproject.toml  pytest.ini
src/dialogos/: __init__.py
