[project]
name = "dialogos"
version = "0.1.0"
description = "philosophical dialogues with LLMs"
readme = "README.md"
authors = [
    { name = "JW Jacobson", email = "116485484+jwjacobson@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.4",
    "fastapi[standard]>=0.136.1",
]

[project.scripts]
dialogos = "dialogos:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
